prometheus working on client and master. needs refactoring

--- a/roles/farmer_config/templates/prometheus_server.xml.j2
+++ b/roles/farmer_config/templates/prometheus_server.xml.j2
@@ -1,4 +1,4 @@
-# Sample config for Prometheus.
+# Ansible configured Prometheus configuration.
 
 global:
   scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
@@ -42,3 +42,6 @@ scrape_configs:
     # machine by default.
     static_configs:
       - targets: ['{{prometheus_server}}:9100']
+      {% for item in scraped_hosts %}- targets: ['{{item}}:9100']
+      {% endfor %}
+
