--- a/roles/worker_config/templates/prometheus_node.yml.j2
+++ b/roles/worker_config/templates/prometheus_node.yml.j2
@@ -1,4 +1,4 @@
-# Sample config for Prometheus.
+# Ansible config for Prometheus.
 
 global:
   scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
