Separated Prometheus Out

--- a/roles/prometheus/templates/prometheus_server.xml.j2
+++ b/roles/prometheus/templates/prometheus_server.xml.j2
@@ -45,3 +45,20 @@ scrape_configs:
       {% for item in scraped_hosts %}- targets: ['{{item}}:9100']
       {% endfor %}
 
+{% if '{{install_snmp}}' %} 
+  - job_name: 'snmp'
+    static_configs:
+      - targets:
+        - 192.168.2.1  # SNMP device.
+    metrics_path: /snmp
+    params:
+      module: [if_mib_ifname]
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: 127.0.0.1:9116  # The SNMP exporter's real hostname:port.
+{% endif %}
+
