--- a/roles/prometheus-server/templates/prometheus_server.xml.j2
+++ b/roles/prometheus-server/templates/prometheus_server.xml.j2
@@ -50,6 +50,9 @@ scrape_configs:
     static_configs:
       - targets:
         - "{{ router_ip }}"  # SNMP device.
+    file_sd_configs:
+        - files:
+            - /etc/prometheus/snmp.yml
     metrics_path: /snmp
     params:
       module: [if_mib_ifname]
@@ -59,6 +62,6 @@ scrape_configs:
       - source_labels: [__param_target]
         target_label: instance
       - target_label: __address__
-        replacement: 127.0.0.1:9116  # The SNMP exporter's real hostname:port.
+        replacement: {{prometheus_server}}:9116  # The SNMP exporter's real hostname:port.
 {% endif %}
 
