working dnsmask - brokengit add .!

--- a/farm-tools/role-dnsmasq/templates/dnsmasq.conf.j2
+++ b/farm-tools/role-dnsmasq/templates/dnsmasq.conf.j2
@@ -207,3 +207,7 @@ address={{ host | join(',') }}
 host-record={{ host | join(',') }}
 {% endfor %}
 {% endif %}
+
+#############################
+# SMELL Jack specific hacks  
+except-interface=lo
