--- a/farm-tools/role-dnsmasq/templates/dnsmasq.conf.j2
+++ b/farm-tools/role-dnsmasq/templates/dnsmasq.conf.j2
@@ -211,3 +211,6 @@ host-record={{ host | join(',') }}
 #############################
 # SMELL Jack specific hacks  
 except-interface=lo
+
+conf-dir=/etc/dnsmasq.d,.rpmnew,.rpmsave,.rpmorig
+
