working start from baseline image

--- a/roles/common/templates/etc_hosts.j2
+++ b/roles/common/templates/etc_hosts.j2
@@ -21,7 +21,7 @@ ff02::2  ip6-allrouters
 #
 {% for group in hosts_add_ansible_managed_hosts_groups %}
 {% for host in groups[group] if hostvars[host][hosts_ansible_network_interface] is defined %}
-{{ hostvars[host][hosts_ansible_network_interface][hosts_ip_protocol]['address'] }} {{ hostvars[host]['ansible_hostname'] }}.{{ pifarm_domainname }} {{ hostvars[host]['ansible_hostname'] }}
+{{ hostvars[host][hosts_ansible_network_interface][hosts_ip_protocol]['address'] }} {{ hostvars[host]['pifarm_hostname'] }}.{{ pifarm_domainname }} {{ hostvars[host]['ansible_hostname'] }} {{ hostvars[host]['inventory_hostname'] }}
 {% endfor %}
 {% endfor %}
 {% endif %}
