working hosts file

--- a/roles/common/templates/etc_hosts.j2
+++ b/roles/common/templates/etc_hosts.j2
@@ -5,6 +5,8 @@
 {% if hosts_add_default_ipv4 %}
 {{ ansible_default_ipv4.address }}  {{ ansible_hostname }}.{{ pifarm_domainname }} {{ ansible_hostname }}
 {% endif %}
+
+
 {% if hosts_add_basic_ipv6 %}
 #
 # Basic IPv6 entries
@@ -15,13 +17,14 @@ ff00::0  ip6-mcastprefix
 ff02::1  ip6-allnodes
 ff02::2  ip6-allrouters
 {% endif %}
+
 {% if hosts_add_ansible_managed_hosts %}
 #
 # Entries for Ansible managed hosts
 #
 {% for group in hosts_add_ansible_managed_hosts_groups %}
-{% for host in groups[group] if hostvars[host][hosts_ansible_network_interface] is defined %}
-{{ hostvars[host][hosts_ansible_network_interface][hosts_ip_protocol]['address'] }} {{ hostvars[host]['pifarm_hostname'] }}.{{ pifarm_domainname }} {{ hostvars[host]['ansible_hostname'] }} {{ hostvars[host]['inventory_hostname'] }}
+{% for host in groups[group] %}
+{{ hostvars[host]['ansible_host'] }}  {{ hostvars[host]['pifarm_hostname'] }}.{{ pifarm_domainname }} {{ hostvars[host]['pifarm_hostname'] }} {{ hostvars[host]['inventory_hostname'] }}
 {% endfor %}
 {% endfor %}
 {% endif %}
