--- a/roles/common/templates/etc_hosts.j2
+++ b/roles/common/templates/etc_hosts.j2
@@ -1,5 +1,7 @@
 # {{ ansible_managed }}
 #
+# Created: {{ ansible_date_time.iso8601 }}
+#
 127.0.0.1  localhost.localdomain  localhost
 127.0.1.1  {{ ansible_hostname }}
 {% if hosts_add_default_ipv4 %}
