--- a/farm-tools/prometheus_server/templates/prometheus_server.xml.j2
+++ b/farm-tools/prometheus_server/templates/prometheus_server.xml.j2
@@ -49,7 +49,7 @@ scrape_configs:
   - job_name: 'snmp'
     static_configs:
       - targets:
-        - "{{ prometheus_router_ip }}"  # SNMP device.
+        - "{{ prometheus_snmp_target }}"  # SNMP device.
     file_sd_configs:
         - files:
             - /etc/prometheus/snmp.yml
