--- a/roles/grafana_server/templates/provision_datasource.yml.j2
+++ b/roles/grafana_server/templates/provision_datasource.yml.j2
@@ -20,7 +20,7 @@ datasources:
   # <int> org id. will default to orgId 1 if not specified
   orgId: 1
   # <string> url
-  url: "http://{{ proemtheus_hostname | d('localhost') }}:9090"
+  url: "http://{{ prometheus_hostname | d('localhost') }}:9090"
   # <string> database password, if used
   password:
   # <string> database user, if used
