--- a/roles/cluster_prometheus/templates/prometheus_node.yml.j2
+++ b/roles/cluster_prometheus/templates/prometheus_node.yml.j2
@@ -8,4 +8,4 @@ global:
   # Attach these labels to any time series or alerts when communicating with
   # external systems (federation, remote storage, Alertmanager).
   external_labels:
-      monitor: '{{ prometheus_monitor_ip }}'
+      monitor: '{{ prometheus_monitor_name }}'
