--- a/roles/cluster_prometheus/templates/prometheus_server.xml.j2
+++ b/roles/cluster_prometheus/templates/prometheus_server.xml.j2
@@ -1,5 +1,6 @@
 # Ansible configured Prometheus configuration.
 
+# ===================================================================
 global:
   scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
   evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
@@ -8,8 +9,9 @@ global:
   # Attach these labels to any time series or alerts when communicating with
   # external systems (federation, remote storage, Alertmanager).
   external_labels:
-      monitor: 'example'
+      monitor: '{{ prometheus_monitor_name }}'
 
+# ===================================================================
 # Alertmanager configuration
 alerting:
   alertmanagers:
@@ -21,10 +23,10 @@ rule_files:
   # - "first_rules.yml"
   # - "second_rules.yml"
 
-# A scrape configuration containing exactly one endpoint to scrape:
-# Here it's Prometheus itself.
+# ===================================================================
+# Scraping configurations 
 scrape_configs:
-  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
+  # ......................................
   - job_name: 'prometheus'
 
     # Override the global default and scrape targets from this job every 5 seconds.
@@ -37,6 +39,7 @@ scrape_configs:
     static_configs:
       - targets: ['{{prometheus_server}}:9090']
 
+  # ......................................
   - job_name: node
     # If prometheus-node-exporter is installed, grab stats about the local
     # machine by default.
@@ -46,10 +49,11 @@ scrape_configs:
       {% endfor %}
 
 {% if '{{ prometheus-install_snmp}}' %} 
+  # ......................................
   - job_name: 'snmp'
     static_configs:
       - targets:
-        - "{{ prometheus_router_ip }}"  # SNMP device.
+        - "{{ pifarm_net_gw }}"  # SNMP device.
     file_sd_configs:
         - files:
             - /etc/prometheus/snmp.yml
