--- a/roles/loki_promtail/templates/syslog.conf.j2
+++ b/roles/loki_promtail/templates/syslog.conf.j2
@@ -1,17 +1,5 @@
 # {{ ansible_managed }}
 
-#Enable sending system logs over UDP to rsyslog server
-# *.* @{{ loki_log_collector }}:{{ loki_log_port }}
-#Enable sending system logs over TCP to rsyslog server
-# *.* @@{{ loki_log_collector }}:{{ loki_log_port }}
-#$ActionQueueFileName queue
-#$ActionQueueMaxDiskSpace 1g
-#$ActionQueueSaveOnShutdown on
-#$ActionQueueType LinkedList
-#$ActionResumeRetryCount -1
-
-#*.* @@(o){{ loki_log_collector }}:{{ loki_log_port }};RSYSLOG_SyslogProtocol23Format
-
 # https://docs.graylog.org/docs/syslog
 
 *.* action(type="omfwd"
@@ -20,4 +8,4 @@ action.resumeRetryCount="-1"
 queue.size="10000"
 queue.saveonshutdown="on"
 template="RSYSLOG_SyslogProtocol23Format"
-target="{{ loki_log_collector }}" Port="{{ loki_log_port }}" Protocol="tcp")
+target="{{ promtail_collector }}" Port="{{ promtail_port }}" Protocol="tcp")
