--- a/roles/loki_promtail/templates/systemd-promtail.service.j2
+++ b/roles/loki_promtail/templates/systemd-promtail.service.j2
@@ -6,7 +6,7 @@ After=network.target
 [Service]
 Type=simple
 User=promtail
-ExecStart=/usr/local/bin/promtail-linux-amd64 -config.file /etc/promtail.yml
+ExecStart=/usr/local/bin/promtail-linux-arm64 -config.file {{ promtail_config_file }}
 
 [Install]
 WantedBy=multi-user.target
