--- a/roles/nfs_server/templates/exports.j2
+++ b/roles/nfs_server/templates/exports.j2
@@ -9,6 +9,6 @@
 # /srv/nfs4/homes  gss/krb5i(rw,sync,no_subtree_check)
 #
 
-{% for item in pifarm_nfs_exports %}
+{% for item in nfs_exports %}
   {{ item }}
 {% endfor %}
