--- a/roles/cluster_loki/templates/syslog_defaults.conf.j2
+++ b/roles/cluster_loki/templates/syslog_defaults.conf.j2
@@ -7,5 +7,6 @@ queue.type="LinkedList"
 action.resumeRetryCount="-1"
 queue.size="10000"
 queue.saveonshutdown="on"
+KeepAlive="on"
 template="RSYSLOG_SyslogProtocol23Format"
 target="{{ promtail_collector }}" Port="{{ promtail_port }}" Protocol="tcp")
