--- a/farm-tools/prometheus_server/templates/prometheus_server.xml.j2
+++ b/farm-tools/prometheus_server/templates/prometheus_server.xml.j2
@@ -38,14 +38,14 @@ scrape_configs:
       - targets: ['{{prometheus_server}}:9090']
 
   - job_name: node
-    # If prometheus-node-exporter is installed, grab stats about the local
+    # If prometheus_node-exporter is installed, grab stats about the local
     # machine by default.
     static_configs:
       - targets: ['{{prometheus_server}}:9100']
       {% for item in scraped_hosts %}- targets: ['{{item}}:9100']
       {% endfor %}
 
-{% if '{{ prometheus-install_snmp}}' %} 
+{% if '{{ prometheus_install_snmp}}' %} 
   - job_name: 'snmp'
     static_configs:
       - targets:
