--- a/roles/cluster_prometheus/templates/prometheus_node.yml.j2
+++ b/roles/cluster_prometheus/templates/prometheus_node.yml.j2
@@ -1,4 +1,4 @@
-# Ansible config for Prometheus.
+# {{ ansible_managed }}
 
 global:
   scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
