--- a/roles/grafana_server/templates/provision_datasource.yml.j2
+++ b/roles/grafana_server/templates/provision_datasource.yml.j2
@@ -1,5 +1,7 @@
 ---
 
+# {{ ansible_managed }}
+
 # config file version
 apiVersion: 1
 
@@ -20,7 +22,7 @@ datasources:
   # <int> org id. will default to orgId 1 if not specified
   orgId: 1
   # <string> url
-  url: "http://{{ prometheus_hostname | d('localhost') }}:9090"
+  url: "http://{{ prometheus_hostname | d('127.0.0.1') }}:9090"
   # <string> database password, if used
   password:
   # <string> database user, if used
