working initialize-workers.yml and monitor_cluster.yml

--- a/roles/worker_config/templates/bash_profile.j2
+++ b/roles/worker_config/templates/bash_profile.j2
@@ -4,6 +4,4 @@ echo "PiFarm Groups: {{ group_names }}"
 
 # [[ -r ~/.profile ]] && . ~/.profile
 
-export PATH=$PATH:$HOME/spark/bin/
-export SPARK_HOME=$HOME/spark/
-export PYTHONPATH=$PYTHONPATH:$SPARK_HOME/python/:$SPARK_HOME/python/lib/py4j-0.9-src.zip
+# TBD....cluster shell commons
