--- a/roles/cluster_loki/templates/loki.yml.j2
+++ b/roles/cluster_loki/templates/loki.yml.j2
@@ -4,57 +4,49 @@ auth_enabled: false
 
 server:
   http_listen_port: {{ loki_port }}
+  grpc_listen_port: {{  grpc_port }}
 
-ingester:
-  lifecycler:
-    address: 127.0.0.1
-    ring:
-      kvstore:
-        store: inmemory
-      replication_factor: 1
-    final_sleep: 0s
-  chunk_idle_period: 1m
-  chunk_retain_period: 30s
-  wal:
-    enabled: true
-    dir: "{{ loki_working_dir }}/wal"
+common:
+  instance_addr: {{ loki_server }}
+  path_prefix: {{ loki_working_dir }}
+  storage:
+    filesystem:
+      chunks_directory: "{{ loki_working_dir }}/chunks"
+      rules_directory: "{{ loki_working_dir }}/loki/rules"
+  replication_factor: 1
+  ring:
+    kvstore:
+      store: inmemory
+
+query_range:
+  results_cache:
+    cache:
+      embedded_cache:
+        enabled: true
+        max_size_mb: 100
 
 schema_config:
   configs:
-  - from: 2018-04-15
-    store: boltdb
-    object_store: filesystem
-    schema: v11    # ????? which version
-    index:
-      prefix: index_
-      period: 168h
+    - from: 2020-10-24
+      store: boltdb-shipper
+      object_store: filesystem
+      schema: v11
+      index:
+        prefix: index_
+        period: 24h
 
-storage_config:
-  boltdb:
-    directory: "{{ loki_working_dir }}/index"
+ruler:
+  alertmanager_url: http://localhost:9093
 
-  filesystem:
-    directory: "{{ loki_working_dir }}/chunks"
-
-limits_config:
-  enforce_metric_name: false
-  reject_old_samples: true
-  reject_old_samples_max_age: 168h
-
-chunk_store_config:
-  max_look_back_period: 0
-
-
-table_manager:
-  chunk_tables_provisioning:
-    inactive_read_throughput: 0
-    inactive_write_throughput: 0
-    provisioned_read_throughput: 0
-    provisioned_write_throughput: 0
-  index_tables_provisioning:
-    inactive_read_throughput: 0
-    inactive_write_throughput: 0
-    provisioned_read_throughput: 0
-    provisioned_write_throughput: 0
-  retention_deletes_enabled: true
-  retention_period: 720h
+# By default, Loki will send anonymous, but uniquely-identifiable usage and configuration
+# analytics to Grafana Labs. These statistics are sent to https://stats.grafana.org/
+#
+# Statistics help us better understand how Loki is used, and they show us performance
+# levels for most users. This helps us prioritize features and documentation.
+# For more information on what's sent, look at
+# https://github.com/grafana/loki/blob/main/pkg/usagestats/stats.go
+# Refer to the buildReport method to see what goes into a report.
+#
+# If you would like to disable reporting, uncomment the following lines:
+analytics:
+  reporting_enabled: false
