--- a/roles/cluster_prometheus/templates/mib_piswitch.j2
+++ b/roles/cluster_prometheus/templates/mib_piswitch.j2
@@ -1,27 +1,29 @@
 modules:
-  piswitch:
-    version: 1
+  {{ mib_module }}:
+    version: 2
     auth:
-      community: {{ pifarm }}
+      community: {{ mib_community }}
     walk:
       - sysUpTime
-      - interfaces
-      - ifXTable
+      - 1.3.6.1.2.1.2              # Same as "interfaces"
+      - 1.3.6.1.2.1.31.1.1.1.6.40  # Instance of "ifHCInOctets" with index "40"
+      #- ifXTable
     lookups:
-      #- source_indexes: [ifIndex]
-      #  lookup: ifAlias
+      - source_indexes: [ifIndex]
+        lookup: ifAlias
       - source_indexes: [ifIndex]
         # Uis OID to avoid conflict with PaloAlto PAN-COMMON-MIB.
         lookup: 1.3.6.1.2.1.2.2.1.2 # ifDescr
-      #- source_indexes: [ifIndex]
+      - source_indexes: [ifIndex]
         # Use OID to avoid conflict with Netscaler NS-ROOT-MIB.
-        #  lookup: 1.3.6.1.2.1.31.1.1.1.1 # ifName
+        lookup: 1.3.6.1.2.1.31.1.1.1.1 # ifName
     overrides:
-      #ifAlias:
-      #  ignore: true # Lookup metric
+      ifAlias:
+        ignore: true # Lookup metric
       ifDescr:
         ignore: true # Lookup metric
       ifName:
         ignore: true # Lookup metric
       ifType:
         type: EnumAsInfo
+
