working to quiet the server for promtail/loki

--- a/roles/cluster_grafana/templates/grafana.ini.j2
+++ b/roles/cluster_grafana/templates/grafana.ini.j2
@@ -673,7 +673,7 @@ admin_password = "{{ grafana_admin_password }}"
 ;mode = console file
 
 # Either "debug", "info", "warn", "error", "critical", default is "info"
-;level = info
+level = warn
 
 # optional settings to set different levels for specific loggers. Ex filters = sqlstore:debug
 ;filters =
