--- a/roles/cluster_loki/templates/syslog_defaults.conf.j2
+++ b/roles/cluster_loki/templates/syslog_defaults.conf.j2
@@ -10,4 +10,6 @@ queue.saveonshutdown="on"
 KeepAlive="on"
 TCP_Framing="octet-counted"
 template="RSYSLOG_SyslogProtocol23Format"
-target="{{ promtail_collector }}" Port="{{ promtail_port }}" Protocol="tcp" KeepAlive="yes")
+target="{{ promtail_collector }}" 
+Port="{{ promtail_port }}" 
+Protocol="tcp" )
