Moved rsyslog exports to udp protocol. little documentaiton work

--- a/roles/cluster_loki/templates/syslog_defaults.conf.j2
+++ b/roles/cluster_loki/templates/syslog_defaults.conf.j2
@@ -12,4 +12,4 @@ TCP_Framing="octet-counted"
 template="RSYSLOG_SyslogProtocol23Format"
 target="{{ promtail_collector }}" 
 Port="{{ promtail_port }}" 
-Protocol="tcp" )
+Protocol="udp" )
